@@ -1,7 +1,5 @@
 package com.f4education.springjwt.security.services;
 
-import java.time.OffsetDateTime;
-import java.time.ZoneOffset;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
@@ -14,21 +12,16 @@ import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Service;
 
 import com.f4education.springjwt.interfaces.RegisterCourseService;
-import com.f4education.springjwt.models.ClassRoom;
 import com.f4education.springjwt.models.Classes;
 import com.f4education.springjwt.models.Course;
 import com.f4education.springjwt.models.RegisterCourse;
 import com.f4education.springjwt.models.Schedule;
-import com.f4education.springjwt.models.Sessions;
 import com.f4education.springjwt.models.Student;
 import com.f4education.springjwt.payload.HandleResponseDTO;
 import com.f4education.springjwt.payload.request.RegisterCourseRequestDTO;
 import com.f4education.springjwt.payload.request.ScheduleCourseProgressDTO;
-import com.f4education.springjwt.payload.request.ScheduleDTO;
-import com.f4education.springjwt.payload.request.TeacherDTO;
 import com.f4education.springjwt.payload.response.CourseProgressResponseDTO;
 import com.f4education.springjwt.payload.response.RegisterCourseResponseDTO;
-import com.f4education.springjwt.payload.response.ScheduleResponse;
 import com.f4education.springjwt.repository.ClassRepository;
 import com.f4education.springjwt.repository.ClassRoomRepository;
 import com.f4education.springjwt.repository.CourseRepository;
@@ -46,40 +39,39 @@ public class RegisterCourseServiceImp implements RegisterCourseService {
 	@Autowired
 	private StudentRepository studentRepository;
 
-    @Autowired
-    private ClassRepository classRepository;
+	@Autowired
+	private ClassRepository classRepository;
 
 	@Autowired
 	private ScheduleRepository scheduleRepository;
-	
+
 	@Autowired
-    private final JdbcTemplate jdbcTemplate = new JdbcTemplate();
-	
-    @Autowired
-    SessionsRepository sessionsRepository;
-    
-    @Autowired
-    ClassRoomRepository classRoomRepository;
+	private final JdbcTemplate jdbcTemplate = new JdbcTemplate();
 
-    @Override
-    public HandleResponseDTO<List<RegisterCourseResponseDTO>> getAllRegisterCourse() {
-        List<RegisterCourse> registerCourses = registerCourseRepository.findAll();
-        List<RegisterCourseResponseDTO> responseDTOs = registerCourses.stream().map(this::convertToResponseDTO)
-                .collect(Collectors.toList());
-        return new HandleResponseDTO<>(HttpStatus.OK.value(), "List RegisterCourse", responseDTOs);
-    }
+	@Autowired
+	SessionsRepository sessionsRepository;
 
-    @Override
-    public HandleResponseDTO<List<RegisterCourseResponseDTO>> findAllRegisterCourseByStudentId(String studentId) {
-        List<RegisterCourse> registerCourses = registerCourseRepository.findByStudentId(studentId);
-        if (registerCourses.isEmpty()) {
-            return new HandleResponseDTO<>(HttpStatus.BAD_REQUEST.value(), "Student ID cannot be found", null);
-        }
-        List<RegisterCourseResponseDTO> responseDTOS = registerCourses.stream()
-                .map(this::convertToResponseDTO)
-                .toList();
-        return new HandleResponseDTO<>(HttpStatus.OK.value(), "List RegisterCourse by Student ID", responseDTOS);
-    }
+	@Autowired
+	ClassRoomRepository classRoomRepository;
+
+	@Override
+	public HandleResponseDTO<List<RegisterCourseResponseDTO>> getAllRegisterCourse() {
+		List<RegisterCourse> registerCourses = registerCourseRepository.findAll();
+		List<RegisterCourseResponseDTO> responseDTOs = registerCourses.stream().map(this::convertToResponseDTO)
+				.collect(Collectors.toList());
+		return new HandleResponseDTO<>(HttpStatus.OK.value(), "List RegisterCourse", responseDTOs);
+	}
+
+	@Override
+	public HandleResponseDTO<List<RegisterCourseResponseDTO>> findAllRegisterCourseByStudentId(String studentId) {
+		List<RegisterCourse> registerCourses = registerCourseRepository.findByStudentId(studentId);
+		if (registerCourses.isEmpty()) {
+			return new HandleResponseDTO<>(HttpStatus.BAD_REQUEST.value(), "Student ID cannot be found", null);
+		}
+		List<RegisterCourseResponseDTO> responseDTOS = registerCourses.stream().map(this::convertToResponseDTO)
+				.toList();
+		return new HandleResponseDTO<>(HttpStatus.OK.value(), "List RegisterCourse by Student ID", responseDTOS);
+	}
 
 	@Override
 	public List<CourseProgressResponseDTO> getCourseProgressByStudentID(String studentId) {
@@ -88,10 +80,17 @@ public class RegisterCourseServiceImp implements RegisterCourseService {
 	}
 
 	@Override
-    public List<ScheduleCourseProgressDTO> findAllScheduleByClassId(Integer classId) {
+	public Boolean checkIfCourseIsDone(String studentId, Integer classId, Integer RegisterCourseId) {
+		RegisterCourse rg = registerCourseRepository.findIfCourseIsDone(studentId, classId, RegisterCourseId,
+				(float) 5.0);
+		return rg != null ? true : false;
+	}
+
+	@Override
+	public List<ScheduleCourseProgressDTO> findAllScheduleByClassId(Integer classId) {
 		List<Schedule> registerCourses = scheduleRepository.findAllScheduleByClassId(classId);
 		return registerCourses.stream().map(this::convertToScheduleCourseProgressDTO).toList();
-    }
+	}
 
 	public ScheduleCourseProgressDTO convertToScheduleCourseProgressDTO(Schedule schedule) {
 		ScheduleCourseProgressDTO courseResponse = new ScheduleCourseProgressDTO();
@@ -100,92 +99,95 @@ public class RegisterCourseServiceImp implements RegisterCourseService {
 		courseResponse.setScheduleId(schedule.getScheduleId());
 		return courseResponse;
 	}
-	
+
 	public CourseProgressResponseDTO convertToCourseProgressResponseDTO(RegisterCourse registerCourse) {
 		CourseProgressResponseDTO courseResponse = new CourseProgressResponseDTO();
+
 		courseResponse.setCourse(registerCourse.getCourse());
 		courseResponse.setClasses(registerCourse.getClasses());
 		courseResponse.setTeacherName(registerCourse.getClasses().getTeacher().getFullname());
+		courseResponse.setRegisterCourseId(registerCourse.getRegisterCourseId());
+
 		return courseResponse;
 	}
 
-    @Override
-    public HandleResponseDTO<RegisterCourseResponseDTO> getRegisterCourseById(Integer registerCourseId) {
-        Optional<RegisterCourse> registerCourseOptional = registerCourseRepository.findById(registerCourseId);
-        if (registerCourseOptional.isEmpty()) {
-            return new HandleResponseDTO<>(HttpStatus.BAD_REQUEST.value(), "RegisterCourse ID cannot be found", null);
-        }
-        RegisterCourse registerCourse = registerCourseOptional.get();
-        RegisterCourseResponseDTO responseDTO = convertToResponseDTO(registerCourse);
-        return new HandleResponseDTO<>(HttpStatus.OK.value(), "Success", responseDTO);
-    }
+	@Override
+	public HandleResponseDTO<RegisterCourseResponseDTO> getRegisterCourseById(Integer registerCourseId) {
+		Optional<RegisterCourse> registerCourseOptional = registerCourseRepository.findById(registerCourseId);
+		if (registerCourseOptional.isEmpty()) {
+			return new HandleResponseDTO<>(HttpStatus.BAD_REQUEST.value(), "RegisterCourse ID cannot be found", null);
+		}
+		RegisterCourse registerCourse = registerCourseOptional.get();
+		RegisterCourseResponseDTO responseDTO = convertToResponseDTO(registerCourse);
+		return new HandleResponseDTO<>(HttpStatus.OK.value(), "Success", responseDTO);
+	}
 
-    @Override
-    public HandleResponseDTO<RegisterCourseResponseDTO> createRegisterCourse(
-            RegisterCourseRequestDTO registerCourseRequestDTO) {
-        Optional<Student> student = studentRepository.findById(registerCourseRequestDTO.getStudentId());
-        Optional<Course> course = courseRepository.findById(registerCourseRequestDTO.getCourseId());
-        if (student.isEmpty()) {
-            return new HandleResponseDTO<>(HttpStatus.BAD_REQUEST.value(), "Student cannot be found", null);
-        }
-        if (course.isEmpty()) {
-            return new HandleResponseDTO<>(HttpStatus.BAD_REQUEST.value(), "Course cannot be found", null);
-        }
-        RegisterCourse registerCourse = convertRequestToEntity(registerCourseRequestDTO);
-        registerCourse.setStatus("Đã đăng ký");
-        registerCourse.setRegistrationDate(new Date());
-        registerCourse.setClasses(null);
-        registerCourse.setStartDate(null);
-        registerCourse.setEndDate(null);
-        RegisterCourse createdRegisterCourse = registerCourseRepository.save(registerCourse);
-        RegisterCourseResponseDTO responseDTO = convertToResponseDTO(createdRegisterCourse);
-        System.out.println(createdRegisterCourse);
-        return new HandleResponseDTO<>(HttpStatus.CREATED.value(), "Create Success", responseDTO);
-    }
+	@Override
+	public HandleResponseDTO<RegisterCourseResponseDTO> createRegisterCourse(
+			RegisterCourseRequestDTO registerCourseRequestDTO) {
+		Optional<Student> student = studentRepository.findById(registerCourseRequestDTO.getStudentId());
+		Optional<Course> course = courseRepository.findById(registerCourseRequestDTO.getCourseId());
+		if (student.isEmpty()) {
+			return new HandleResponseDTO<>(HttpStatus.BAD_REQUEST.value(), "Student cannot be found", null);
+		}
+		if (course.isEmpty()) {
+			return new HandleResponseDTO<>(HttpStatus.BAD_REQUEST.value(), "Course cannot be found", null);
+		}
+		RegisterCourse registerCourse = convertRequestToEntity(registerCourseRequestDTO);
+		registerCourse.setStatus("Đã đăng ký");
+		registerCourse.setRegistrationDate(new Date());
+		registerCourse.setClasses(null);
+		registerCourse.setStartDate(null);
+		registerCourse.setEndDate(null);
+		RegisterCourse createdRegisterCourse = registerCourseRepository.save(registerCourse);
+		RegisterCourseResponseDTO responseDTO = convertToResponseDTO(createdRegisterCourse);
+		System.out.println(createdRegisterCourse);
+		return new HandleResponseDTO<>(HttpStatus.CREATED.value(), "Create Success", responseDTO);
+	}
 
-    @Override
-    public HandleResponseDTO<RegisterCourseResponseDTO> updateRegisterCourse(Integer registerCourseId,
-            RegisterCourseRequestDTO registerCourseRequestDTO) {
-        Optional<RegisterCourse> registerCourseOptional = registerCourseRepository.findById(registerCourseId);
-        if (registerCourseOptional.isEmpty()) {
-            return new HandleResponseDTO<>(HttpStatus.BAD_REQUEST.value(), "RegisterCourse ID cannot be found", null);
-        }
-        RegisterCourse existRegisterCourse = registerCourseOptional.get();
-        existRegisterCourse.setStatus("Đã hủy");
-        existRegisterCourse.setRegistrationDate(new Date());
-        if (!existRegisterCourse.getRegisterCourseId().equals(registerCourseRequestDTO.getRegisterCourseId())) {
-            return new HandleResponseDTO<>(HttpStatus.BAD_REQUEST.value(), "RegisterCourse ID mismatch", null);
-        }
-        convertRequestToEntity(registerCourseRequestDTO, existRegisterCourse);
-        RegisterCourse updatedRegisterCourse = registerCourseRepository.save(existRegisterCourse);
-        RegisterCourseResponseDTO responseDTO = convertToResponseDTO(updatedRegisterCourse);
-        return new HandleResponseDTO<>(HttpStatus.OK.value(), "Update Success", responseDTO);
-    }
+	@Override
+	public HandleResponseDTO<RegisterCourseResponseDTO> updateRegisterCourse(Integer registerCourseId,
+			RegisterCourseRequestDTO registerCourseRequestDTO) {
+		Optional<RegisterCourse> registerCourseOptional = registerCourseRepository.findById(registerCourseId);
+		if (registerCourseOptional.isEmpty()) {
+			return new HandleResponseDTO<>(HttpStatus.BAD_REQUEST.value(), "RegisterCourse ID cannot be found", null);
+		}
+		RegisterCourse existRegisterCourse = registerCourseOptional.get();
+		existRegisterCourse.setStatus("Đã hủy");
+		existRegisterCourse.setRegistrationDate(new Date());
+		if (!existRegisterCourse.getRegisterCourseId().equals(registerCourseRequestDTO.getRegisterCourseId())) {
+			return new HandleResponseDTO<>(HttpStatus.BAD_REQUEST.value(), "RegisterCourse ID mismatch", null);
+		}
+		convertRequestToEntity(registerCourseRequestDTO, existRegisterCourse);
+		RegisterCourse updatedRegisterCourse = registerCourseRepository.save(existRegisterCourse);
+		RegisterCourseResponseDTO responseDTO = convertToResponseDTO(updatedRegisterCourse);
+		return new HandleResponseDTO<>(HttpStatus.OK.value(), "Update Success", responseDTO);
+	}
 
-    private RegisterCourseResponseDTO convertToResponseDTO(RegisterCourse registerCourse) {
-        RegisterCourseResponseDTO registerCourseDTO = new RegisterCourseResponseDTO();
-        BeanUtils.copyProperties(registerCourse, registerCourseDTO);
-        registerCourseDTO.setRegisterCourseId(registerCourse.getRegisterCourseId());
-        registerCourseDTO.setStatus(registerCourse.getStatus());
-        registerCourseDTO.setNumberSession(registerCourse.getNumberSession());
-        registerCourseDTO.setRegistrationDate(registerCourse.getRegistrationDate());
-        registerCourseDTO.setCourseDuration(registerCourse.getCourseDuration());
-        registerCourseDTO.setCoursePrice(registerCourse.getCoursePrice());
-        registerCourseDTO.setCourseDescription(registerCourse.getCourseDescription());
-        registerCourseDTO.setImage(registerCourseDTO.getImage());
-        registerCourseDTO.setCourseName(registerCourse.getCourse().getCourseName());
-        registerCourseDTO.setStudentName(registerCourse.getStudent().getFullname());
-        registerCourse.setClasses(registerCourse.getClasses());
-        registerCourseDTO.setStartDate(registerCourse.getStartDate());
-        registerCourseDTO.setStartDate(registerCourse.getEndDate());
-        registerCourseDTO.setNumberSession(registerCourse.getNumberSession());
-        registerCourseDTO.setCourseId(registerCourse.getCourse().getCourseId());
-        registerCourseDTO.setStudentId(registerCourse.getStudent().getStudentId());
-        if (registerCourse.getClasses() != null) {
-            registerCourseDTO.setClassId(registerCourse.getClasses().getClassId());
-        }
-        return registerCourseDTO;
-    }
+	private RegisterCourseResponseDTO convertToResponseDTO(RegisterCourse registerCourse) {
+		RegisterCourseResponseDTO registerCourseDTO = new RegisterCourseResponseDTO();
+		BeanUtils.copyProperties(registerCourse, registerCourseDTO);
+		registerCourseDTO.setRegisterCourseId(registerCourse.getRegisterCourseId());
+		registerCourseDTO.setStatus(registerCourse.getStatus());
+		registerCourseDTO.setNumberSession(registerCourse.getNumberSession());
+		registerCourseDTO.setRegistrationDate(registerCourse.getRegistrationDate());
+		registerCourseDTO.setCourseDuration(registerCourse.getCourseDuration());
+		registerCourseDTO.setCoursePrice(registerCourse.getCoursePrice());
+		registerCourseDTO.setCourseDescription(registerCourse.getCourseDescription());
+		registerCourseDTO.setImage(registerCourseDTO.getImage());
+		registerCourseDTO.setCourseName(registerCourse.getCourse().getCourseName());
+		registerCourseDTO.setStudentName(registerCourse.getStudent().getFullname());
+		registerCourse.setClasses(registerCourse.getClasses());
+		registerCourseDTO.setStartDate(registerCourse.getStartDate());
+		registerCourseDTO.setStartDate(registerCourse.getEndDate());
+		registerCourseDTO.setNumberSession(registerCourse.getNumberSession());
+		registerCourseDTO.setCourseId(registerCourse.getCourse().getCourseId());
+		registerCourseDTO.setStudentId(registerCourse.getStudent().getStudentId());
+		if (registerCourse.getClasses() != null) {
+			registerCourseDTO.setClassId(registerCourse.getClasses().getClassId());
+		}
+		return registerCourseDTO;
+	}
 
 	private RegisterCourse convertRequestToEntity(RegisterCourseRequestDTO registerCourseRequestDTO) {
 		RegisterCourse registerCourse = new RegisterCourse();
@@ -211,57 +213,51 @@ public class RegisterCourseServiceImp implements RegisterCourseService {
 		return registerCourse;
 	}
 
-    private void convertRequestToEntity(RegisterCourseRequestDTO registerCourseRequestDTO,
-            RegisterCourse registerCourse) {
-        Student student = studentRepository.findById(registerCourseRequestDTO.getStudentId()).orElse(null);
-        Course course = courseRepository.findById(registerCourseRequestDTO.getCourseId()).orElse(null);
-        BeanUtils.copyProperties(registerCourseRequestDTO, registerCourse);
-        if (course != null) {
-            registerCourse.setCourse(course);
-            registerCourse.setCourseDuration(course.getCourseDuration());
-            registerCourse.setCoursePrice(course.getCoursePrice());
-            registerCourse.setImage(course.getImage());
-            registerCourse.setCourseDescription(course.getCourseDescription());
-            registerCourse.setNumberSession(course.getNumberSession());
-        }
-        if (student != null) {
-            registerCourse.setStudent(student);
-        }
-    }
+	private void convertRequestToEntity(RegisterCourseRequestDTO registerCourseRequestDTO,
+			RegisterCourse registerCourse) {
+		Student student = studentRepository.findById(registerCourseRequestDTO.getStudentId()).orElse(null);
+		Course course = courseRepository.findById(registerCourseRequestDTO.getCourseId()).orElse(null);
+		BeanUtils.copyProperties(registerCourseRequestDTO, registerCourse);
+		if (course != null) {
+			registerCourse.setCourse(course);
+			registerCourse.setCourseDuration(course.getCourseDuration());
+			registerCourse.setCoursePrice(course.getCoursePrice());
+			registerCourse.setImage(course.getImage());
+			registerCourse.setCourseDescription(course.getCourseDescription());
+			registerCourse.setNumberSession(course.getNumberSession());
+		}
+		if (student != null) {
+			registerCourse.setStudent(student);
+		}
+	}
 
-    @Override
-    public List<RegisterCourseResponseDTO> getAllRegisterCoursesByCourse_CourseName() {
-        return registerCourseRepository.findAll()
-                .stream()
-                .collect(Collectors.toMap(registration -> registration.getCourse().getCourseId(),
-                        registration -> registration, (a, b) -> a))
-                .values()
-                .stream()
-                .map(this::convertToResponseDTO)
-                .collect(Collectors.toList());
-    }
+	@Override
+	public List<RegisterCourseResponseDTO> getAllRegisterCoursesByCourse_CourseName() {
+		return registerCourseRepository.findAll().stream()
+				.collect(Collectors.toMap(registration -> registration.getCourse().getCourseId(),
+						registration -> registration, (a, b) -> a))
+				.values().stream().map(this::convertToResponseDTO).collect(Collectors.toList());
+	}
 
-    @Override
-    public List<RegisterCourseResponseDTO> updateRegisterCourseInClass(
-            RegisterCourseRequestDTO registerCourseRequestDTO) {
-        List<RegisterCourse> listRegisterCourse = registerCourseRepository
-                .findByCourseId(registerCourseRequestDTO.getCourseId());
-        List<Integer> listRegisterCourseId = registerCourseRequestDTO.getListRegisterCourseId();
-        List<RegisterCourse> filteredRegisterCourses = listRegisterCourse
-                .stream()
-                .filter(registerCourse -> listRegisterCourseId.contains(registerCourse.getRegisterCourseId()))
-                .collect(Collectors.toList());
-        Classes foundClass = classRepository.findById(registerCourseRequestDTO.getClassId()).get();
-        filteredRegisterCourses.forEach(registerCourse -> {
-            registerCourse.setClasses(foundClass);
-            registerCourse.setStudent(registerCourse.getStudent());
-            registerCourse.setCourse(registerCourse.getCourse());
-        });
+	@Override
+	public List<RegisterCourseResponseDTO> updateRegisterCourseInClass(
+			RegisterCourseRequestDTO registerCourseRequestDTO) {
+		List<RegisterCourse> listRegisterCourse = registerCourseRepository
+				.findByCourseId(registerCourseRequestDTO.getCourseId());
+		List<Integer> listRegisterCourseId = registerCourseRequestDTO.getListRegisterCourseId();
+		List<RegisterCourse> filteredRegisterCourses = listRegisterCourse.stream()
+				.filter(registerCourse -> listRegisterCourseId.contains(registerCourse.getRegisterCourseId()))
+				.collect(Collectors.toList());
+		Classes foundClass = classRepository.findById(registerCourseRequestDTO.getClassId()).get();
+		filteredRegisterCourses.forEach(registerCourse -> {
+			registerCourse.setClasses(foundClass);
+			registerCourse.setStudent(registerCourse.getStudent());
+			registerCourse.setCourse(registerCourse.getCourse());
+		});
 
-        return registerCourseRepository.saveAll(filteredRegisterCourses)
-                .stream()
-                .map(this::convertToResponseDTO)
-                .collect(Collectors.toList());
+		return registerCourseRepository.saveAll(filteredRegisterCourses).stream().map(this::convertToResponseDTO)
+				.collect(Collectors.toList());
 
-    }
+	}
+
 }
